#!/usr/bin/env python3
"""
Rust Engine Gap Analysis for workspace-qdrant-mcp
Task 266.2 - Agent 2: Rust Engine Gap Analysis Agent

Detailed analysis of Component 1 gaps between current Rust daemon
and PRD v3.0 requirements for the Ingestion and Watching Daemon.

PRD v3.0 Component 1 Requirements:
- Role: Heavy Processing Powerhouse
- Responsibilities: File ingestion, LSP integration, document conversion,
  embedding generation, file watching
- Performance: 1000+ documents/minute processing, <500MB memory usage
- Communication: gRPC server for MCP interface, SQLite for state management
"""

import os
import json
import subprocess
from pathlib import Path
from typing import Dict, List, Set, Tuple
from dataclasses import dataclass, asdict
import re

@dataclass
class RustComponentGap:
    """Represents a gap in Rust engine component"""
    component_name: str
    current_implementation: str
    required_implementation: str
    gap_severity: str  # "critical", "high", "medium", "low"
    migration_effort: str  # "simple", "moderate", "complex"
    dependencies: List[str]
    reusable_code: List[str]

class RustEngineGapAnalyzer:
    """Detailed Rust engine component analysis against PRD v3.0"""

    def __init__(self, project_root: str):
        self.project_root = Path(project_root)
        self.rust_dirs = [
            "src/rust/daemon/core",
            "src/rust/daemon/python-bindings",
            "rust-engine"
        ]
        self.gaps = []

    def analyze_rust_engine_gaps(self) -> Dict:
        """Main analysis method for Rust engine gaps"""
        print("ü¶Ä Starting detailed Rust engine gap analysis...")

        # Phase 1: Current Rust implementation inventory
        rust_inventory = self._inventory_current_rust_implementation()

        # Phase 2: PRD v3.0 requirements mapping
        requirements_analysis = self._map_prd_requirements()

        # Phase 3: Gap identification and severity assessment
        gap_analysis = self._identify_rust_gaps(rust_inventory, requirements_analysis)

        # Phase 4: gRPC implementation gap analysis
        grpc_analysis = self._analyze_grpc_gaps()

        # Phase 5: LSP integration gap analysis
        lsp_analysis = self._analyze_lsp_gaps()

        # Phase 6: Daemon lifecycle gap analysis
        lifecycle_analysis = self._analyze_daemon_lifecycle_gaps()

        # Phase 7: Performance requirements gap analysis
        performance_analysis = self._analyze_performance_gaps()

        # Phase 8: Reusable component identification
        reusable_analysis = self._identify_reusable_rust_components()

        # Generate comprehensive report
        report = self._generate_rust_gap_report(
            rust_inventory, requirements_analysis, gap_analysis,
            grpc_analysis, lsp_analysis, lifecycle_analysis,
            performance_analysis, reusable_analysis
        )

        return report

    def _inventory_current_rust_implementation(self) -> Dict:
        """Inventory all current Rust implementations"""
        print("üì¶ Inventorying current Rust implementation...")

        rust_files = {}

        for rust_dir in self.rust_dirs:
            full_path = self.project_root / rust_dir
            if full_path.exists():
                rust_files[rust_dir] = []
                for file_path in full_path.rglob("*.rs"):
                    rel_path = str(file_path.relative_to(self.project_root))
                    rust_files[rust_dir].append(rel_path)

        # Analyze Cargo.toml files for dependencies
        cargo_analysis = self._analyze_cargo_dependencies()

        # Analyze current capabilities
        capabilities = self._analyze_current_capabilities(rust_files)

        return {
            "rust_files": rust_files,
            "cargo_dependencies": cargo_analysis,
            "current_capabilities": capabilities,
            "communication_patterns": self._analyze_current_communication()
        }

    def _analyze_cargo_dependencies(self) -> Dict:
        """Analyze Cargo.toml dependencies"""
        cargo_files = list(self.project_root.rglob("Cargo.toml"))
        dependencies = {}

        for cargo_file in cargo_files:
            try:
                with open(cargo_file, 'r') as f:
                    content = f.read()
                    # Simple TOML parsing for dependencies
                    dep_section = False
                    file_deps = []
                    for line in content.split('\n'):
                        if '[dependencies]' in line:
                            dep_section = True
                        elif line.startswith('[') and dep_section:
                            dep_section = False
                        elif dep_section and '=' in line:
                            dep_name = line.split('=')[0].strip()
                            file_deps.append(dep_name)

                    dependencies[str(cargo_file.relative_to(self.project_root))] = file_deps
            except Exception as e:
                print(f"Warning: Could not parse {cargo_file}: {e}")

        return dependencies

    def _analyze_current_capabilities(self, rust_files: Dict) -> Dict:
        """Analyze current Rust capabilities by scanning source files"""
        capabilities = {
            "document_processing": False,
            "file_watching": False,
            "embedding_generation": False,
            "grpc_server": False,
            "lsp_integration": False,
            "daemon_lifecycle": False,
            "state_management": False,
            "ipc_communication": False
        }

        all_files = []
        for file_list in rust_files.values():
            all_files.extend(file_list)

        # Scan for capabilities by file patterns and content
        for file_path in all_files:
            full_path = self.project_root / file_path
            if full_path.exists():
                try:
                    with open(full_path, 'r') as f:
                        content = f.read().lower()

                    # Document processing
                    if any(term in content for term in ['document', 'parser', 'pdf', 'docx']):
                        capabilities["document_processing"] = True

                    # File watching
                    if any(term in content for term in ['watch', 'notify', 'inotify']):
                        capabilities["file_watching"] = True

                    # Embedding generation
                    if any(term in content for term in ['embedding', 'vector', 'fastembed']):
                        capabilities["embedding_generation"] = True

                    # gRPC
                    if any(term in content for term in ['grpc', 'tonic', 'proto']):
                        capabilities["grpc_server"] = True

                    # LSP
                    if any(term in content for term in ['lsp', 'language_server', 'tower_lsp']):
                        capabilities["lsp_integration"] = True

                    # Daemon lifecycle
                    if any(term in content for term in ['daemon', 'service', 'systemd']):
                        capabilities["daemon_lifecycle"] = True

                    # State management
                    if any(term in content for term in ['sqlite', 'database', 'state']):
                        capabilities["state_management"] = True

                    # IPC
                    if any(term in content for term in ['ipc', 'pipe', 'socket']):
                        capabilities["ipc_communication"] = True

                except Exception as e:
                    print(f"Warning: Could not read {file_path}: {e}")

        return capabilities

    def _analyze_current_communication(self) -> Dict:
        """Analyze current communication patterns"""
        return {
            "python_bindings": "PyO3 based Python bindings",
            "ipc_mechanism": "Basic IPC communication",
            "grpc_server": "Missing - no gRPC implementation found",
            "state_persistence": "File-based or memory-based"
        }

    def _map_prd_requirements(self) -> Dict:
        """Map PRD v3.0 requirements for Rust engine"""
        return {
            "core_responsibilities": [
                "File ingestion with 1000+ documents/minute",
                "LSP integration for code understanding",
                "Document conversion (PDF, DOCX, etc.)",
                "Embedding generation with FastEmbed",
                "File watching with real-time processing",
                "gRPC server for MCP interface",
                "SQLite state management"
            ],
            "performance_requirements": {
                "throughput": "1000+ documents/minute",
                "memory_usage": "<500MB",
                "response_time": "Sub-second processing",
                "concurrency": "Multi-threaded processing"
            },
            "communication_requirements": {
                "grpc_server": "Primary interface for MCP server",
                "sqlite_state": "Persistent state management",
                "async_processing": "Non-blocking operations"
            },
            "integration_requirements": {
                "lsp_servers": "20+ language LSP integrations",
                "daemon_lifecycle": "Production daemon management",
                "error_recovery": "Graceful error handling and recovery"
            }
        }

    def _identify_rust_gaps(self, inventory: Dict, requirements: Dict) -> List[RustComponentGap]:
        """Identify gaps between current implementation and requirements"""
        print("üîç Identifying Rust engine gaps...")

        gaps = []
        capabilities = inventory["current_capabilities"]

        # gRPC Server Gap
        if not capabilities["grpc_server"]:
            gaps.append(RustComponentGap(
                component_name="gRPC Server",
                current_implementation="None - using PyO3 bindings only",
                required_implementation="Full gRPC server with service definitions",
                gap_severity="critical",
                migration_effort="complex",
                dependencies=["tonic", "tokio", "proto definitions"],
                reusable_code=["Error handling", "Data structures"]
            ))

        # LSP Integration Gap
        if not capabilities["lsp_integration"]:
            gaps.append(RustComponentGap(
                component_name="LSP Integration",
                current_implementation="None - no LSP client integration",
                required_implementation="LSP client for 20+ languages",
                gap_severity="critical",
                migration_effort="complex",
                dependencies=["tower-lsp", "LSP protocol implementation"],
                reusable_code=["File processing", "Metadata extraction"]
            ))

        # Daemon Lifecycle Gap
        if not capabilities["daemon_lifecycle"]:
            gaps.append(RustComponentGap(
                component_name="Daemon Lifecycle Management",
                current_implementation="Basic process execution",
                required_implementation="Production daemon with service management",
                gap_severity="high",
                migration_effort="moderate",
                dependencies=["systemd integration", "signal handling"],
                reusable_code=["Process management", "Configuration"]
            ))

        # State Management Gap
        if not capabilities["state_management"]:
            gaps.append(RustComponentGap(
                component_name="SQLite State Management",
                current_implementation="File-based or memory state",
                required_implementation="SQLite database with transactions",
                gap_severity="medium",
                migration_effort="moderate",
                dependencies=["rusqlite", "migration system"],
                reusable_code=["Data models", "Configuration"]
            ))

        return gaps

    def _analyze_grpc_gaps(self) -> Dict:
        """Detailed gRPC implementation gap analysis"""
        print("üåê Analyzing gRPC implementation gaps...")

        return {
            "current_state": "No gRPC implementation found",
            "required_components": [
                "gRPC service definitions (.proto files)",
                "Server implementation with tonic",
                "Service method implementations",
                "Async request handling",
                "Error handling and status codes",
                "Health check service"
            ],
            "implementation_steps": [
                "Define .proto service definitions",
                "Generate Rust code from proto files",
                "Implement service traits",
                "Set up tonic server with tokio runtime",
                "Integrate with existing document processing",
                "Add comprehensive error handling"
            ],
            "estimated_effort": "2-3 weeks for full implementation",
            "dependencies": ["tonic", "tokio", "prost", "proto definitions"]
        }

    def _analyze_lsp_gaps(self) -> Dict:
        """Detailed LSP integration gap analysis"""
        print("üî§ Analyzing LSP integration gaps...")

        return {
            "current_state": "No LSP integration found",
            "required_capabilities": [
                "LSP client implementation",
                "Multi-language LSP server management",
                "Document synchronization",
                "Symbol extraction",
                "Type information gathering",
                "Error and diagnostic collection"
            ],
            "language_support_required": [
                "Python", "JavaScript/TypeScript", "Rust", "Go", "Java",
                "C/C++", "C#", "Ruby", "PHP", "Swift", "Kotlin"
            ],
            "implementation_complexity": "High - requires LSP protocol expertise",
            "estimated_effort": "3-4 weeks for multi-language support",
            "dependencies": ["tower-lsp", "lsp-types", "language-specific LSP servers"]
        }

    def _analyze_daemon_lifecycle_gaps(self) -> Dict:
        """Analyze daemon lifecycle management gaps"""
        print("üîÑ Analyzing daemon lifecycle gaps...")

        return {
            "current_state": "Basic process execution",
            "required_capabilities": [
                "System service integration (systemd)",
                "Graceful startup and shutdown",
                "Signal handling (SIGTERM, SIGINT)",
                "PID file management",
                "Log rotation integration",
                "Auto-restart on failure"
            ],
            "implementation_needs": [
                "Service definition files",
                "Signal handling implementation",
                "State persistence on shutdown",
                "Recovery mechanisms",
                "Health monitoring"
            ],
            "estimated_effort": "1-2 weeks",
            "complexity": "Moderate"
        }

    def _analyze_performance_gaps(self) -> Dict:
        """Analyze performance requirement gaps"""
        print("‚ö° Analyzing performance requirement gaps...")

        return {
            "throughput_requirement": "1000+ documents/minute",
            "memory_requirement": "<500MB usage",
            "current_performance": "Unknown - no benchmarks found",
            "performance_gaps": [
                "No performance benchmarking framework",
                "Unknown current throughput capabilities",
                "Memory usage not monitored",
                "No concurrent processing optimization"
            ],
            "optimization_areas": [
                "Async/await processing pipeline",
                "Memory pool management",
                "Batch processing optimization",
                "Streaming document processing"
            ],
            "benchmarking_needed": [
                "Document ingestion throughput",
                "Memory usage profiling",
                "Concurrent processing limits",
                "Error recovery performance"
            ]
        }

    def _identify_reusable_rust_components(self) -> Dict:
        """Identify reusable Rust components for migration"""
        print("‚ôªÔ∏è Identifying reusable Rust components...")

        return {
            "high_reusability": [
                {
                    "component": "Document Processing Engine",
                    "location": "src/rust/daemon/core/",
                    "reuse_potential": "90%",
                    "migration_effort": "Low - minor interface changes"
                },
                {
                    "component": "Embedding Generation",
                    "location": "src/rust/daemon/core/",
                    "reuse_potential": "85%",
                    "migration_effort": "Low - add gRPC wrapper"
                },
                {
                    "component": "File Watching System",
                    "location": "src/rust/daemon/core/",
                    "reuse_potential": "80%",
                    "migration_effort": "Medium - integrate with gRPC"
                }
            ],
            "medium_reusability": [
                {
                    "component": "Error Handling Framework",
                    "location": "src/rust/daemon/core/",
                    "reuse_potential": "70%",
                    "migration_effort": "Medium - adapt for gRPC errors"
                },
                {
                    "component": "Configuration System",
                    "location": "src/rust/daemon/core/",
                    "reuse_potential": "60%",
                    "migration_effort": "Medium - add state persistence"
                }
            ],
            "low_reusability": [
                {
                    "component": "Python Bindings",
                    "location": "src/rust/daemon/python-bindings/",
                    "reuse_potential": "30%",
                    "migration_effort": "High - replace with gRPC"
                }
            ]
        }

    def _generate_rust_gap_report(self, inventory, requirements, gaps,
                                grpc_analysis, lsp_analysis, lifecycle_analysis,
                                performance_analysis, reusable_analysis) -> Dict:
        """Generate comprehensive Rust gap analysis report"""
        print("üìã Generating Rust engine gap report...")

        return {
            "analysis_metadata": {
                "timestamp": "2025-09-20T22:09:00+02:00",
                "component": "Component 1 - Rust Engine",
                "analysis_type": "Detailed Gap Analysis"
            },
            "executive_summary": {
                "overall_alignment": "~40% - Good foundation, missing gRPC and LSP",
                "critical_gaps": len([g for g in gaps if g.gap_severity == "critical"]),
                "high_reusability_components": len(reusable_analysis["high_reusability"]),
                "estimated_migration_effort": "6-8 weeks for full compliance"
            },
            "current_inventory": inventory,
            "prd_requirements": requirements,
            "identified_gaps": [asdict(gap) for gap in gaps],
            "grpc_gap_analysis": grpc_analysis,
            "lsp_gap_analysis": lsp_analysis,
            "lifecycle_gap_analysis": lifecycle_analysis,
            "performance_gap_analysis": performance_analysis,
            "reusable_components": reusable_analysis,
            "migration_roadmap": {
                "phase_1": "Implement gRPC server foundation (2 weeks)",
                "phase_2": "Add LSP integration (3-4 weeks)",
                "phase_3": "Implement daemon lifecycle (1-2 weeks)",
                "phase_4": "Performance optimization and testing (1 week)"
            }
        }

def main():
    """Main analysis execution"""
    project_root = "/Users/chris/Dropbox/dev/ai/claude-code-cfg/mcp/workspace-qdrant-mcp"

    analyzer = RustEngineGapAnalyzer(project_root)
    report = analyzer.analyze_rust_engine_gaps()

    # Save detailed report
    output_file = f"{project_root}/20250920-2209_rust_engine_gap_analysis_report.json"
    with open(output_file, 'w') as f:
        json.dump(report, f, indent=2)

    print(f"‚úÖ Rust engine gap analysis complete! Report saved to: {output_file}")

    # Print executive summary
    print(f"\nüìä RUST ENGINE EXECUTIVE SUMMARY:")
    print(f"Overall Alignment: {report['executive_summary']['overall_alignment']}")
    print(f"Critical Gaps: {report['executive_summary']['critical_gaps']}")
    print(f"High Reusability Components: {report['executive_summary']['high_reusability_components']}")
    print(f"Estimated Migration Effort: {report['executive_summary']['estimated_migration_effort']}")

    return report

if __name__ == "__main__":
    main()