//! Memory management gRPC service implementation

use crate::daemon::WorkspaceDaemon;
use crate::proto::{
    memory_service_server::MemoryService,
    AddDocumentRequest, AddDocumentResponse,
    UpdateDocumentRequest, UpdateDocumentResponse,
    RemoveDocumentRequest, GetDocumentRequest, GetDocumentResponse,
    ListDocumentsRequest, ListDocumentsResponse,
    CreateCollectionRequest, CreateCollectionResponse,
    DeleteCollectionRequest, ListCollectionsRequest, ListCollectionsResponse,
    DocumentInfo, CollectionInfo, DocumentContent, CollectionConfig,
};
use std::sync::Arc;
use tonic::{Request, Response, Status};
use tracing::{debug, error, info};

/// Memory service implementation
#[derive(Debug)]
pub struct MemoryServiceImpl {
    daemon: Arc<WorkspaceDaemon>,
}

impl MemoryServiceImpl {
    pub fn new(daemon: Arc<WorkspaceDaemon>) -> Self {
        Self { daemon }
    }
}

#[tonic::async_trait]
impl MemoryService for MemoryServiceImpl {
    async fn add_document(
        &self,
        request: Request<AddDocumentRequest>,
    ) -> Result<Response<AddDocumentResponse>, Status> {
        let req = request.into_inner();
        debug!("Adding document: {}", req.file_path);

        // TODO: Implement actual document addition
        let response = AddDocumentResponse {
            document_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            error_message: String::new(),
        };

        Ok(Response::new(response))
    }

    async fn update_document(
        &self,
        request: Request<UpdateDocumentRequest>,
    ) -> Result<Response<UpdateDocumentResponse>, Status> {
        let req = request.into_inner();
        debug!("Updating document: {}", req.document_id);

        // TODO: Implement actual document update
        let response = UpdateDocumentResponse {
            success: true,
            error_message: String::new(),
            updated_at: Some(prost_types::Timestamp {
                seconds: chrono::Utc::now().timestamp(),
                nanos: 0,
            }),
        };

        Ok(Response::new(response))
    }

    async fn remove_document(
        &self,
        request: Request<RemoveDocumentRequest>,
    ) -> Result<Response<()>, Status> {
        let req = request.into_inner();
        info!("Removing document: {} from collection: {}", req.document_id, req.collection_name);

        // TODO: Implement actual document removal

        Ok(Response::new(()))
    }

    async fn get_document(
        &self,
        request: Request<GetDocumentRequest>,
    ) -> Result<Response<GetDocumentResponse>, Status> {
        let req = request.into_inner();
        debug!("Getting document: {} from collection: {}", req.document_id, req.collection_name);

        // TODO: Implement actual document retrieval
        let response = GetDocumentResponse {
            document_id: req.document_id.clone(),
            content: Some(DocumentContent {
                text: "Example document content".to_string(),
                chunks: vec![],
                extracted_metadata: std::collections::HashMap::new(),
            }),
            metadata: std::collections::HashMap::new(),
            created_at: Some(prost_types::Timestamp {
                seconds: chrono::Utc::now().timestamp() - 86400,
                nanos: 0,
            }),
            updated_at: Some(prost_types::Timestamp {
                seconds: chrono::Utc::now().timestamp(),
                nanos: 0,
            }),
        };

        Ok(Response::new(response))
    }

    async fn list_documents(
        &self,
        request: Request<ListDocumentsRequest>,
    ) -> Result<Response<ListDocumentsResponse>, Status> {
        let req = request.into_inner();
        debug!("Listing documents in collection: {}", req.collection_name);

        // TODO: Implement actual document listing
        let response = ListDocumentsResponse {
            documents: vec![
                DocumentInfo {
                    document_id: uuid::Uuid::new_v4().to_string(),
                    file_path: "/example/document.txt".to_string(),
                    title: "Example Document".to_string(),
                    document_type: crate::proto::DocumentType::Text as i32,
                    file_size: 1024,
                    metadata: std::collections::HashMap::new(),
                    created_at: Some(prost_types::Timestamp {
                        seconds: chrono::Utc::now().timestamp() - 86400,
                        nanos: 0,
                    }),
                    updated_at: Some(prost_types::Timestamp {
                        seconds: chrono::Utc::now().timestamp(),
                        nanos: 0,
                    }),
                },
            ],
            total_count: 1,
            has_more: false,
        };

        Ok(Response::new(response))
    }

    async fn create_collection(
        &self,
        request: Request<CreateCollectionRequest>,
    ) -> Result<Response<CreateCollectionResponse>, Status> {
        let req = request.into_inner();
        info!("Creating collection: {} for project: {}", req.collection_name, req.project_id);

        // TODO: Implement actual collection creation
        let response = CreateCollectionResponse {
            success: true,
            error_message: String::new(),
            collection_id: uuid::Uuid::new_v4().to_string(),
        };

        Ok(Response::new(response))
    }

    async fn delete_collection(
        &self,
        request: Request<DeleteCollectionRequest>,
    ) -> Result<Response<()>, Status> {
        let req = request.into_inner();
        info!("Deleting collection: {} for project: {} (force: {})",
              req.collection_name, req.project_id, req.force);

        // TODO: Implement actual collection deletion

        Ok(Response::new(()))
    }

    async fn list_collections(
        &self,
        request: Request<ListCollectionsRequest>,
    ) -> Result<Response<ListCollectionsResponse>, Status> {
        let req = request.into_inner();
        debug!("Listing collections for project: {}", req.project_id);

        // TODO: Implement actual collection listing
        let response = ListCollectionsResponse {
            collections: vec![
                CollectionInfo {
                    collection_name: "example-collection".to_string(),
                    collection_id: uuid::Uuid::new_v4().to_string(),
                    project_id: req.project_id.clone(),
                    document_count: 10,
                    total_size_bytes: 10240,
                    config: Some(CollectionConfig {
                        vector_size: 384,
                        distance_metric: "Cosine".to_string(),
                        enable_indexing: true,
                        metadata_schema: std::collections::HashMap::new(),
                    }),
                    created_at: Some(prost_types::Timestamp {
                        seconds: chrono::Utc::now().timestamp() - 86400,
                        nanos: 0,
                    }),
                },
            ],
        };

        Ok(Response::new(response))
    }
}